fixed white space and links to home

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ nav {
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(10px);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
-    width: 100vw;
+    width: 100%;
     /* height: fit-content; */
     position: fixed;
     z-index: 99999;
@@ -130,7 +130,7 @@ nav {
 
 /* CTA Section */
 
-.cta-section>.container {
+.cta-section .container {
     color: black;
     padding-block: 10px;
     backdrop-filter: blur(10px);
@@ -144,7 +144,7 @@ nav {
 }
 
 .cta-section .container p {
-    font-weight: 400 !important;
+    font-weight: 400;
 }
 
 /* Footer */
@@ -162,9 +162,17 @@ nav {
 
 @media screen and (max-width: 576px) {
 
-    .container,
-    .container-sm {
-        max-width: 540px !important;
+    html,body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+
+    nav {
+        position: static;
+        z-index: 0;
     }
 
     .flex-logo {
